United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6968336 VM crash guarantee(!nm->is_zombie()) failed: cannot lock a zombie method
6968336 : VM crash guarantee(!nm->is_zombie()) failed: cannot lock a zombie method

Details
Type:
Bug
Submit Date:
2010-07-12
Status:
Closed
Updated Date:
2012-02-01
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
x86
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs19
Fixed Versions:
hs19

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
These tests crashes on all platforms with product and fastdebug.
The crash is not reproduced with previous build.
The issues is reproduced with -Xcomp only.

nsk/jvmti/GenerateEvents/genevents001
nsk/jvmti/RedefineClasses/redefclass028
nsk/jvmti/RedefineClasses/redefclass029
nsk/jvmti/RedefineClasses/redefclass030
nsk/jvmti/scenarios/sampling/SP06/sp06t001
nsk/jvmti/scenarios/sampling/SP06/sp06t002
nsk/jvmti/scenarios/sampling/SP06/sp06t003

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/a528509c992b
                                     
2010-07-21
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/a528509c992b
                                     
2010-07-15
EVALUATION

The fix for 6965671 iterates over the code cache and processes nmethod for which is_alive is true.  It includes an nmethodLocker to protect the nmethod but it's illegal to lock zombie nmethods.  The nmethodLocker should be inside the is_alive test instead of outside.
                                     
2010-07-13



Hardware and Software, Engineered to Work Together