6968336: VM crash guarantee(!nm->is_zombie()) failed: cannot lock a zombie method

Reviewed-by: twisti